# qr_invoice_import_tool

./: .prettierignore  .prettierrc  README.md  package-lock.json  package.json  pyproject.toml
qr_invoice_import_tool/: hooks.py  modules.txt
qr_invoice_import_tool/qr_invoice_import_tool/doctype/qr_invoice_import_tool/: qr_invoice_import_tool.js  qr_invoice_import_tool.json  qr_invoice_import_tool.py  test_qr_invoice_import_tool.py
qr_invoice_import_tool/qr_invoice_import_tool/doctype/qr_invoice_import_tool_item/: qr_invoice_import_tool_item.json  qr_invoice_import_tool_item.py
