[project]
name = "qr_invoice_import_tool"
authors = [
    { name = "Centura AG", email = "info@centura.ch"}
]
description = "Tool to import QR invoices by scanning the QR code for the fast and automatic creation of purchase invoices."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "schwifty==2024.11.0"
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
